--- a/src/styles/repositories.scss
+++ b/src/styles/repositories.scss
@@ -1,32 +1,66 @@
+div.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 section.repository-list {
   margin: 40px;
 
   h1 {
     margin-bottom: 16px;
+    font-size: 48px;
   }
 
   ul {
     list-style: none;
 
     li {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      border-radius: 16px;
+      padding: 0 30px 0 30px;
+      height: 140px;
+      width: 48rem;
+
+      background: #d8e2dc;
+
+      img {
+        height: 56px; 
+        width: 56px; 
+        border-radius: 50%;
+      }
 
       & + li {
         margin-top: 20px;
-      }
-
-      p {
-        font-size: 14px;
-        color: #444;
-        margin-top: 8px;
-      }
-
-      a {
-        display: inline-block;
-        font-size: 14px;
-        margin-top: 16px;
-        color: #7159c1;
-        text-decoration: none;      
-      }
+      }      
     }
+  }
+}
+
+div.repo-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 0 0 30px;
+
+  strong {
+    margin-bottom: 10px;
+    color: #343a40;
+  }
+  
+  p {
+    font-size: 14px;
+    color: #6c757d;
+    margin-top: 8px;
+  }
+
+  a {
+    display: inline-block;
+    font-size: 14px;
+    margin-top: 16px;
+    color: #7159c1;
+    text-decoration: none;      
   }
 }
